# himawari8_wallpaper

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  config.example.json  environment.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: python-ci.yml  release.yml
assets/: README.md
assets/windows/: README.md
docs/: BUILD_WINDOWS_EXE.md  CODEX_HANDOFF.md  GITHUB_UPLOAD_STEPS.md  RELEASING.md
scripts/: bootstrap.ps1  bootstrap.py  bootstrap.sh  build_windows_bundle.py  init_git.ps1  pack_release.py  repo_check.py  sanitize_repo.py  uninstall.py
src/: himawari_wallpaper_gui.py  himawari_wallpaper_runner.py
src/himawari_wallpaper/: __init__.py  app.py  autostart.py  config.py  gui.py  platforms.py  uninstall.py  wallpaper.py
tests/: test_app.py  test_autostart.py  test_bootstrap.py  test_build_windows_bundle.py  test_config.py  test_gui.py  test_pack_release.py  test_platforms.py  test_uninstall.py  test_wallpaper.py
